--- a/stylesheet.css
+++ b/stylesheet.css
@@ -171,6 +171,7 @@ DT {
 	width: 100%;
 	max-width: 576px;
 	height: auto;
+	text-align: center;
 }
 
 input[type=text], input[type=email], textarea {
